paper updated LP

--- a/inst/paper/RTM_paper.Rmd
+++ b/inst/paper/RTM_paper.Rmd
@@ -4,7 +4,7 @@ subtitle: "a Learning Environment for Reaction Transport Modelling"
 author: "Lubos Polerecky, Dries Bonte and Karline Soetaert"
 date: "July 2021"
 output: pdf_document
-abstract: \noindent Since many years we have been teaching courses on environmental and reaction-transport modelling to master students at Ghent and Utrecht University. Our aim is to teach students how to create models from scratch and apply them to advance their understanding of natural systems, including those perturbed by anthropogenic activities. Typically, students attending our classes have different backgrounds and highly variable levels of skills in quantitative and computational methods, which makes it difficult to find a teaching style that suits everyone. To overcome this issue, we revised our didactic approach and now teach in the form of a "flipped class", where students prepare themselves ahead of the class using material available on-line, and then, during the class, put the learned concepts into practice by solving problems and exercises with a direct feedback from us. To facilitate this teaching approach, we created educational videos, tutorials, and exercises that guide the students in learning and exploring the topics covered in the courses. Here, we present the R-package RTM, which merges this teaching material together with our modelling and teaching experiences under the common platform of the programming language R.
+abstract: \noindent Since many years we have been teaching courses on environmental and reaction-transport modelling to master students at Ghent and Utrecht University. Our aim is to teach students how to create models "from scratch" and apply them to advance their understanding of natural systems, including those perturbed by anthropogenic activities. Typically, students attending our classes have different backgrounds and highly variable levels of skills in quantitative and computational methods, which makes it difficult to find a teaching style that suits everyone. To overcome this issue, we revised our didactic approach and now teach in the form of a "flipped class", where students prepare themselves ahead of the class using material available on-line, and then, during the class, put the learned concepts into practice by solving problems and exercises with a direct feedback from us. To facilitate this teaching approach, we created educational videos, tutorials, and exercises that guide the students in learning and exploring the topics covered in the courses. Here, we present the R-package RTM, which merges this teaching material together with our modelling and teaching experiences under the common platform of the programming language R.
 vignette: >
   %\VignetteIndexEntry{RTM: learning environment for reaction transport modelling}
   %\VignetteEngine{knitr::rmarkdown}
@@ -22,9 +22,9 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # Introduction
 
-The courses Environmental Modelling and Reactive Transport Modelling in the Hydrosphere have been taught at Ghent and Utrecht University, respectively, since many years. Students attending these courses learn how to make mechanistic models that start from first principles of physics, chemistry, biology, and ecology, are mathematically formulated as differential equations, and are solved numerically by a computer. The models aim to advance their understanding of natural systems by allowing prediction of the systems' behaviour under various scenarios (e.g., response of the global carbon cycle to fossil fuel burning).
+The courses Environmental Modelling and Reactive Transport Modelling in the Hydrosphere have been taught at Ghent University (Belgium) and Utrecht University (The Netherlands), respectively, since many years. Students attending these courses learn how to make mechanistic models that start from first principles of physics, chemistry, biology, and ecology, are mathematically formulated as differential equations, and are solved numerically by a computer. The models aim to advance their understanding of natural systems by allowing prediction of the systems' behaviour under various scenarios (e.g., response of the global carbon cycle to burning of fossil fuels).
 
-The aim of the courses is to teach students how to make models from scratch. This differs from many modelling courses where students merely learn how to apply existing tools. More specifically, students learn to
+The aim of the courses is to teach students how to make models "from scratch". This differs from many modelling courses where students merely learn how to apply existing models. More specifically, students in our courses learn to
 
   - create conceptual models that describe environmental scenarios or problems,
   - translate conceptual models into mechanistic models and, ultimately, mathematical equations that describe the variation of the state variables characterising the system in time and space,
@@ -36,14 +36,14 @@ We use R (R core team 2020) as the programming language for implementing and sol
 
 Our students typically follow a master program in Earth or Life Sciences, and are interested in disciplines such as oceanography, biology, biogeochemistry, hydrology, or physics. Some have a good understanding of the processes occurring in the natural environment, but have never written a computer program before; others have ample experience in programming, mathematics or computer science, but little knowledge about the processes in nature. Due to this variation in background, knowledge and skills, a big challenge is to find a teaching style that can stimulate efficient and effective learning for all students. 
 
-# Our way of teaching: "flipped class"
+Previously, we have employed the more "traditional" teaching approach, where the instructor explains the context, theory and examples during lectures, and encourages students to practice the taught material by themselves (or in small groups) outside the class (e.g., by solving problems and exercises given as homework assignments). In this approach, however, the brighter students often get bored as they feel that the material is being taught too slowly, while the less bright students become demotivated or frustrated as they cannot follow. Additionally, the percentage of students that works on the outside-the-class assignments is typically less than desired.
 
-In the "traditional" learning environment, the instructor explains the context, theory and examples during lectures, and encourages students to practice the taught material by themselves at home (e.g., by solving problems and exercises given as homework assignments). In our "flipped class" approach, this process is reversed. Students obtain the theoretical lectures in advance and prepare themselves before the class. Then, during the class, they practice the learned concepts by solving problems and exercises with a direct feedback from the instructor.
-
-One of the advantages of the flipped class is that students can work more focused and obtain a more thorough understanding of the material. Typically, the level of understanding of students in the modelling class is highly diverse. Thus, in the traditional way of teaching, the brighter students often get bored as they feel that the material is being taught too slowly, while less bright students become demotivated or frustrated as they cannot follow. In the flipped class approach, students can take the time they need to prepare themselves for the lessons individually. Subsequently, while in the classroom, they can directly interact with tutors and therefore explore the topics to the depth determined by their own ability, motivation and ambition. This provides more room for tutoring "a la tete du client".
+Based on this experience, we decided to experiment with our didactic approach and employ the so-called "flipped class" teaching approach. In this approach, students obtain the theoretical lectures in advance and prepare themselves before the class. Then, during the class, they practice the learned concepts by solving problems and exercises with a direct feedback from the instructor. One of the advantages of the flipped class is that students can work more focused and thus obtain a more thorough understanding of the material. Before the class, students can take the time they need to prepare themselves individually. Subsequently, while in the classroom, they can directly interact with tutors and therefore explore the topics to the depth determined by their own ability, motivation and ambition. This provides more room for tutoring "a la tete du client".
 
 The modelling course taught by Karline Soetaert and Dries Bonte at Ghent University has been in the form of a flipped class since the academic year 2019--2020, while the course taught by Lubos Polerecky and Karline Soetaert at Utrecht University first implemented this approach in the academic year 2020--2021. This way of teaching proved to be a positive experience:
-while in previous years students would complain that they do not get enough practice in class, there is now ample time for practical exercises. Also the class is much more dynamic, with dramatically improved students participation and involvement.
+while in previous years students would complain that they did not get enough practice in class, there is now ample time for practical exercises. Also the class is much more dynamic, with dramatically improved students participation and involvement.
+
+Here, we describe a newly developed R-package RTM. This package merges four main components of the teaching material --- tutorials, exercises, template files, and extra readers --- into a common platform. First, we discuss how the flipped modelling class is implemented. Then, we provide examples that illustrate how the RTM package can be used to deliver the teaching material to students and thus aid their learning experience. 
 
 # Implementation of the flipped classroom
 
