massbalance renamed to massbalance_chemistry for consistency, pptx moved to paper/extras folder

--- a/inst/exercises/massbalance/massbalance_chemistry/massbalance_chemistry.Rmd
+++ b/inst/exercises/massbalance/massbalance_chemistry/massbalance_chemistry.Rmd
@@ -13,8 +13,8 @@ fontsize: 11pt
 linestretch: 1.15 
 ---
 
-```{r child = 'massbalance_Q.Rmd'}
+```{r child = 'massbalance_chemistry_Q.Rmd'}
 ```
 
-```{r child = 'massbalance_A.Rmd'}
+```{r child = 'massbalance_chemistry_A.Rmd'}
 ```
