--- a/inst/paper/RTM_paper.Rmd
+++ b/inst/paper/RTM_paper.Rmd
@@ -4,6 +4,10 @@ subtitle: "a Learning Environment for Reaction Transport Modelling"
 author: "Lubos Polerecky, Dries Bonte and Karline Soetaert"
 date: "July 2021"
 output: pdf_document
+header-includes: 
+  \usepackage{float} 
+  \floatplacement{figure}{th}
+fontsize: 10pt
 abstract: \noindent Since many years we have been teaching courses on environmental and reaction-transport modelling to master students at Ghent and Utrecht University. Our aim is to teach students how to create models "from scratch" and apply them to advance their understanding of natural systems, including those perturbed by anthropogenic activities. Typically, students attending our classes have different backgrounds and highly variable levels of skills in quantitative and computational methods, which makes it difficult to find a teaching style that suits everyone. To overcome this issue, we revised our didactic approach and now teach in the form of a "flipped class", where students prepare themselves ahead of the class using material available on-line, and then, during the class, put the learned concepts into practice by solving problems and exercises with a direct feedback from us. To facilitate this teaching approach, we created educational videos, tutorials, exercises, and extra readers to guide the students in learning and exploring the topics covered in the courses. Here, we present the R-package RTM, which merges this teaching material into a common platform and thus simplifies its delivery to students.
 vignette: >
   %\VignetteIndexEntry{RTM: learning environment for reaction transport modelling}
@@ -46,51 +50,45 @@ Here, we discuss how the flipped modelling class is implemented. Specifically, w
 
 # Implementation of the flipped class
 
-To prepare for each lesson, students are offered the choice to either read one or more chapters from a modelling textbook (Soetaert and Herman, 2009), or watch a short video that explains the theory. Then they are encouraged to test their understanding of the theory by answering a number of short (often multiple-choice) questions. After this "priming", students go to the classroom, where they submerge themselves, under the supervision of tutors, in solving more substantial exercises.
+To prepare for each lesson, students are offered the choice to either read one or more chapters from the course textbook (Soetaert and Herman, 2009), or watch one or more short knowledge clips that explain the theory. Then they are encouraged to test their understanding of the theory by answering a number of short (often multiple-choice) questions delivered in a quiz-like format. This initial "priming" phase is done individually by each student. Subsequently, students go to the classroom and submerge themselves, under the guidance of tutors, in solving more substantial exercises. The work in this second phase is done in small groups (2--4 students per group), which facilitates exchange of ideas among the students and thus boosts their overall participation and involvement.
 
-## Videos that elaborate on the theory
+## Knowledge clips
 
-The theory behind the material taught in the modelling courses is explained in a series of educational videos. The videos, which typically take around 15 minutes or less, were created as follows:
+The theory behind the material taught in the modelling courses is explained in a series of knowledge clips. The videos, which typically take between 5 to 15 minutes, were developed by (1) creating a series of didactically sound slide presentations, (2) writing down the narrative for each slide, and (3) recording and combining the narrative and slides into a video. Steps 1 and 2 were developed by the tutors, while step 3 was partially outsourced and partially executed by the tutors.
 
-1. Didactically sound slide presentations were created.
-2. The narrative for the material on the slides was written down.
-3. The narrative was recorded and combined with the slides.
-   
-Steps 1 and 2 were created by the tutors, while step 3 was partially outsourced and partially edited by the tutors.
-
-Creation of the educational videos offers several longer-term advantages. For example, they were made available to the public as a YouTube playlist (\url{https://www.youtube.com/playlist?list=PLx8PHcDdmF-uD1Pr07TU9SzlhlGpfrxqn}), and so can serve as an online course. Also, if students wish to refresh their knowledge of the subject, they can re-watch the videos at any time and in any order. Importantly, they can watch the videos at their own pace (e.g., if some students find the videos too slow, multi-tasking or the fast-forward knob is an option).
+Creation of the knowledge clips offers several longer-term advantages. For example, they are available to the public via a YouTube playlist,\footnote{https://www.youtube.com/playlist?list=PLx8PHcDdmF-uD1Pr07TU9SzlhlGpfrxqn} and so can serve as an online course. Also, if students wish to refresh their knowledge of the subject, they can re-watch the clips at any time and in any order. Importantly, they dictate the pace at which they watch and learn from the clips.
 
 ## Quiz-like questions
 
-Each video is accompanied by a set of quiz-like questions and small exercises. These were implemented in the form of *tutorials* provided by the R-package *learnr* (Schloerke et al., 2020). They mostly consist of multiple-choice questions, sprinkled here and there with a more substantial exercise that needs an R-code for it to be solved.
+Each video is accompanied by a set of quiz-like questions and short exercises (Figure 2). These were implemented in the form of *tutorials* provided by the R-package *learnr* (Schloerke et al., 2020). They mostly consist of multiple-choice questions, sprinkled here and there with a more substantial exercise that needs to be solved by completing an R-code embedded within the text.
 
-The quizzes were designed to allow the students to test their basic understanding of the subject explained in the video. Before we introduced these quizzes, we often noted that some students overestimate their grasp of the material and are overly confident, while others are baffled by the complexity of the material and may loose confidence that they will eventually manage to understand it. The quizzes allow students to make this assessment by, and for, themselves. They are not graded, but students are encouraged to use them for their own benefit, as they facilitate better preparation for the more substantial exercises in the classroom and ultimately for the exam. The quizzes also improve students’ quantitative and problem-solving skills by giving them hints and guidance as to how to tackle specific questions.
+The quizzes were designed to allow the students to test their basic understanding of the subject explained in the knowledge clip. Before we introduced these quizzes, we often noted that some students overestimate their grasp of the theory and are overly confident, while others are baffled by the complexity of the material and may loose confidence that they will eventually manage to understand it. The quizzes allow students to make this assessment by, and for, themselves. They are *not* graded, but students are encouraged to use them for their own benefit, as they facilitate better preparation for the more substantial exercises in the classroom and, ultimately, for the exam.
 
 ## Classroom exercises
 
-While in the classroom, students work in small groups (2--4 students per group) on practical modelling *exercises* that address current environmental issues. It is required that students design, develop and implement their own models from scratch (e.g., they start from a conceptual diagram and progress until they develop an R-code that generates quantitative predictions).
+While in the classroom, students work on practical modelling *exercises* that address current environmental problems. The overall philosophy of this activity is that students design, develop and implement their models "from scratch". That is, after being given a text that defines a problem, they start from a conceptual diagram and progress until they develop an R-code that generates quantitative predictions about the behaviour of the studied system. Based on these predictions they can discuss how to tackle the original problem.
 
-At the time of writing this vignette, the exercises address, among others, the following environmental issues:
+At the time of writing this text, the exercises address, among others, the following environmental problems:
 
-* *The CO$_2$ problem*. Atmospheric CO$_2$ concentrations are described by an Earth-system box model that comprises carbon fluxes among the major Earth's carbon reservoirs. The model is used to estimate the impact of anthropogenic activities (e.g., burning of fossil fuels, deforestation) on the atmospheric CO$_2$ concentrations and to explore the effects of certain mitigation strategies (e.g., ocean fertilisation). This is an example of a linear model.
-* *The ozone problem*. Ozone is a green-house gas and, at high concentrations, harmful to humans and animals. It also plays an important protective role by absorbing harmful UV radiation. The ozone model is used to test how anthropogenic emissions of NO (nitric oxide) due to combustion or burning of fuels alter the natural ozone dynamics in the lower atmosphere. It is a good example of a "typical" chemistry model.
+* *The CO$_2$ problem*. Atmospheric CO$_2$ concentrations are described by an Earth-system box model that comprises carbon fluxes among the major Earth's carbon reservoirs. The model is used to estimate the impact of anthropogenic activities (e.g., burning of fossil fuels, deforestation) on the atmospheric CO$_2$ concentrations and to explore the effects of certain mitigation strategies (e.g., ocean fertilisation). This exercise is an example of a linear model.
+* *The ozone problem*. Ozone is a green-house gas and, at high concentrations, harmful to humans and animals. It also plays an important protective role by absorbing harmful UV radiation. The ozone model is used to test how anthropogenic emissions of NO (nitric oxide) due to combustion or burning of fuels alter the natural ozone dynamics in the lower atmosphere. It is an example of a "typical" chemistry model.
 * *Ocean acidification*. This is a very complex problem as it deals with equilibrium chemistry. The topic is introduced by three exercises of increasing complexity. A more extensive model dealing with ocean acidification is not part of the mandatory course material, but is provided as auxiliary material that students may consult if they are interested in the topic (see below).
 * *The COVID pandemic*.  An epidemiological model (so-called SIR model) is developed to describe the spread of the SARS-CoV2 (corona) virus within a population. In addition to infection and recovery, the model includes hospitalisations, mortality, vaccination, and virus mutations. The students practice how to use information from epidemiologists (who are not modelers) to develop and apply such models.
 * *Agricultural eutrophication*. This model describes how fertilization with nutrients affects the competition between crops and weeds, and explores the impact of different fertilization strategies on agricultural run-off. In addition to ecological interactions, the model also contains a (simplistic) economic component that lets students explore the monetary aspects of farming.
-* *Dead zones in a river*. This one-dimensional reaction-transport model describes the distribution of dissolved oxygen concentrations in a river subjected to excessive nutrient input (ammonia). The model is used to estimate the maximal nutrient inputs that can be allowed to keep the minimal oxygen concentration above a certain critical level.
+* *Dead zones in a river*. This one-dimensional reaction-transport model describes the distribution of dissolved oxygen concentrations in a river subjected to excessive input of nutrients (ammonia). The model is used to estimate the maximal nutrient input that can be allowed to keep the minimal oxygen concentration above a certain critical level.
 
 Additional exercise topics include
 
-* Introduction to R for modellers
-* Making of conceptual diagrams and formulating of mass balance equations
-* Dissolution of silica particles (e.g., diatom frustules)
-* Bacteria-mediated mineralisation of detritus
-* Early diagenesis in marine sediments (a simplified P cycle, and the coupled cycles of C, N, O, and S)
-* Food web modelling of a lake or river ecosystem
-* Competition between plants in grasslands
-* Competition between floating plants and algae in shallow lakes
-* Virus dynamics in the ocean
-* Bio-economic modelling of a Scallop aquaculture
+* introduction to R for modellers,
+* making of conceptual diagrams and formulating of mass balance equations,
+* dissolution of silica particles (e.g., diatom frustules),
+* bacteria-mediated mineralisation of detritus,
+* early diagenesis in marine sediments (a simplified P cycle, and the coupled cycles of C, N, O, and S),
+* food web modelling of a lake or river ecosystem,
+* competition between plants in grasslands,
+* competition between floating plants and algae in shallow lakes,
+* virus dynamics in the ocean,
+* bio-economic modelling of a Scallop aquaculture.
 
 New material can be added in the future, thus creating a repository from which modules can be selected based on students' interests that vary from year to year.
 
@@ -120,55 +118,124 @@ Although students develop their models from scratch, they do not necessarily sta
 Additionally, they include templates used in some of the exercises, including models that deal with
 
 * local equilibrium chemistry (*RTM_equilibrium*),
-* a basic food-web and element cycling in an aquatic ecosystem (*RTM_npzd*).
+* a basic food-web and element cycling model in an aquatic ecosystem (*RTM_npzd*).
 
 ## Final projects
 
 After completing the tutorials, exercises, and the written mid-term exam, students proceed with a work on a larger project of their choice. This involves the development of a model about a specific environmental topic and is done in small groups of 2--4 people. In contrast to the exercises made in the classroom, they do this with less guidance from the tutors. They also need to document their work in a written report, where they outline the scientific rationale, describe their model (including assumptions and implementation), and present and interpret the results, much like they would do when writing a scientific paper. Note that the topics of these final projects are *not* part of the RTM package.
 
-# About this package
+# Workflow example
 
-The RTM package contains tutorials, exercises and extra material (readers) that students study and work through during the course *Reactive transport modeling in the Hydrosphere* (taught at Utrecht University, The Netherlands) or *Environmental modelling* (taught at Ghent University, Belgium). Anyone who wants to learn environmental or reaction-transport modelling can consult the tutorials and make the exercises. The answers are also provided, in a sub-directory under the *inst* package directory.
+We recommend that students use *Rstudio* to learn and develop their models in R. At the beginning of the course, students install the RTM package. At present, this is done using the R-command
+```
+devtools::install_github("dynamic-R/RTM", depend=TRUE)
+```
+Loading the package into R implements the following public functions: ``RTMtutorial()``, ``RTMexercise()``, ``RTMtemplate()``, and ``RTMreader()``. Additionally, it implements the private function ``RTManswer()``.
 
 ## Tutorials
 
-The function *RTMtutorial* runs a specific tutorial. To list all possible tutorials, use the command
-
+The list of available tutorials (Table 1) is displayed by using the R-command 
 ```
-RTMtutorial("?")
+RTMtutorial()
 ```
 
 ```{r, echo=FALSE}
-knitr::kable(RTM:::RTMtutorial("?"))
+knitr::kable(RTM:::RTMtutorial(), row.names = TRUE,
+             caption="List of available tutorials provided by the RTM package.")
 ```
+
+A specific tutorial is started by including the name, or the corresponding index, of the tutorial as the input argument to ``RTMtutorial()``. For example, the "ecology" tutorial is started using one of the following commands:
+```
+RTMtutorial("ecology")
+RTMtutorial(11)
+RTMtutorial("ecology", output = "RMD")
+```
+The first two commands open the tutorial in a web-browser. In case this fails, the third command can be used to open the tutorial's R Markdown file in the *Rstudio* editor. Subsequently, the tutorial is started by clicking the "Run Document" button at the top of the editor window.
+
+The first item in the tutorial provides a link to a short knowledge clip and a reference to chapters in the course textbook (Figure 1). These two resources are used to explain the theory behind the topics covered in the class.
+
+![An example of a tutorial provided by the RTM package. Each tutorial starts with a short knowledge clip and a reference to chapters in the course textbook.](images/tutorial11-video.png)
+
+Subsequently, students proceed by clicking on any of the quiz-like questions listed in the left panel. After selecting and submitting an answer (Figure 2, top), students receive feedback that explains the rationale behind the correct answer (Figure 2, middle). Each tutorial ends with a list of exercises that students should be able to solve after they have understood the material covered in the tutorial (Figure 2, bottom). These exercises are solved by the students in the classroom under the supervision of the tutors.
+
+![An example of a tutorial provided by the RTM package. Top and middle panel shows a question just before and just after submitting the answer, respectively. Bottom panel shows a list of extra exercises recommended after the completion of the tutorial.](images/tutorial_qanda.pdf)
+
+\clearpage
 
 ## Exercises
 
-The function *RTMexercise* opens the questions for each exercise. Note that to display the exercise in a PDF format, you need to have \LaTeX\ installed on your computer. To list all possible exercises, use the command
-
+The list of available exercises (Table 2) is displayed by using the R-command 
 ```
-RTMexercise("?")
+RTMexercise()
 ```
 
 ```{r, echo=FALSE}
-knitr::kable(RTM:::RTMexercise("?"))
+knitr::kable(RTM:::RTMexercise(), row.names = TRUE,
+             caption="List of available exercises provided by the RTM package.")
 ```
+
+A specific exercise is displayed by including the name, or the corresponding index, of the exercise as the input argument to ``RTMexercise()``. For example, the "COVID" exercise is started using one of the following commands:
+```
+RTMexercise("COVID")
+RTMexercise(14)
+RTMexercise("COVID", output = "PDF")
+```
+By default, the exercise is converted into a ``HTML`` format and displayed in a web browser. Additional output formats include ``RMD``, ``PDF``, or ``WORD``. Note that the ``PDF`` option requires an installation of \LaTeX, while the ``WORD`` option requires an installation of programs such as Microsoft Word or LibreOffice.
+
+## Templates
+
+In one of the tasks in the "COVID" exercise, students are asked to develop a model that describes the spread of a viral infection in a population of susceptible, infected and recovered individuals (the so-called SIR model). To implement the model in R, they are offered the possibility to use a template R Markdown file rather than start from a blank sheet. 
+
+The list of available templates (Table 3) is displayed by using the R-command
+```
+RTMtemplate() ### note that this does not work at present. must use (x = "?")
+```
+
+```{r, echo=FALSE}
+knitr::kable(RTM:::RTMtemplate(x = "?"), row.names = TRUE,
+             caption="List of available templates provided by the RTM package.")
+```
+
+A specific template file is opened by including the name, or the corresponding index, of the template as the input argument to ``RTMtemplate()``. Alternatively, one can access it via the *Rstudio* menu File $\rightarrow$ New File $\rightarrow$ R Markdown $\rightarrow$ From Template.
+
+For the "COVID" exercise, the template ``RTM_0D.Rmd`` is recommended. This template is opened using one of the R-commands
+```
+RTMtemplate("rtm0D")
+RTMtemplate(1)
+```
+The core part of the template file is shown in Figure 3 (left panel). Using this template and the differential equations that the students formulated in the first part of the exercise, it should not be too difficult for them to implement the model in R. All they need to do is to modify the R-chunks where the initial values of the state variables, model parameters, rate expressions, mass balance equations (i.e., time-derivatives of the state variables), and extra output of the model function (e.g., process rates) are defined and the model is solved (Figure 3, right panel).
+
+![Core part of an R Markdown template file for solving dynamic models in 0D. The different R-chunks are used to define the initial values of the state variables (a), model parameters (b), rate expressions (c), mass balance equations (d), and extra output of the model function (e). The R-chunk on the bottom solves the model depending on the model function (f) and plots the solution. ](images/template_solution.pdf)
+
 
 ## Auxiliary material
 
-The function *RTMreader* opens the auxiliary material. Note that to display these readers in a PDF format, you need to have \LaTeX\ installed on your computer. To list all possible documents, use the command
-
+The list of extra readers (Table 4), which are used as auxiliary material in the course for students that wish to explore specific topics in greater depth, is displayed by using the R-command
 ```
-RTMreader("?")
+RTMreader()
 ```
 
 ```{r, echo=FALSE}
-knitr::kable(RTM:::RTMreader("?"))
+knitr::kable(RTM:::RTMreader(), row.names = TRUE,
+             caption="List of extra readers provided by the RTM package.")
 ```
 
-## RTM templates
+A specific reader is opened by including the name, or the corresponding index, of the template as the input argument to ``RTMreader()``.
 
-To open a model template in Rstudio, choose one of the files from the menu File $\rightarrow$ New File $\rightarrow$ R Markdown $\rightarrow$ From Template. Save the file under a different name after opening the template. 
+In one of the tasks in the "COVID" exercise, students are asked to enhance their SIR model by considering that in order to curb the spread of the viral infection, the society takes measures by temporarily reducing the contact between people by 90% between days 30 and 70 after the viral outbreak. These measures can be modelled by assuming that the infection rate constant is reduced by 90% during this time interval. One way to implement such a model in R is through the use of a forcing function. The reader that explains the use of forcing functions in dynamic R-models is generated using the R-command
+```
+RTMreader("forcing", output="PDF")
+```
+By studying this reader, students will learn that all they need to do to implement such temporary measures in their model is to implement a forcing function based on data, add a forcing function as one of the input arguments of the model function, and include the forcing function when solving the model (Figure 4).
+
+![Core parts of the simplest and enhanced COVID model. The simplest model is reproduced from the right panel in Figure 3. The enhanced model is implemented by implementing the forcing function based on data (a), adding a forcing function as input of the model function (b), and including the forcing function when solving the model (c).](images/template_solution2.pdf)
+
+
+# Conclusion
+
+The RTM package contains tutorials, exercises, model templates, and extra readers that students study and work through during the course *Reactive transport modeling in the Hydrosphere* (taught at Utrecht University, The Netherlands) or *Environmental modelling* (taught at Ghent University, Belgium). Anyone who wants to learn environmental or reaction-transport modelling can consult the tutorials and make the exercises. The answers are also provided, and can be viewed using the R-command ``RTM:::RTManswer()``.
+
+
 
 
 # References
